# hackernews-api

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  connection.py  create_db.sql  pyproject.toml  scrape.py
.github/workflows/: actions-ec2.yml
config/: __init__.py
my_app/: __init__.py  log_umami.py  models.py
my_app/controllers/: article.py
my_app/db/: connection.py  create_db.sqlite3
